--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@semaphore-protocol/group": "^3.11.1",
     "@semaphore-protocol/identity": "^3.11.1",
+    "@semaphore-protocol/proof": "^3.11.1",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
