--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@semaphore-protocol/identity": "^3.11.1",
     "@semaphore-protocol/proof": "^3.11.1",
     "crypto-browserify": "^3.12.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "ts-loader": "^9.4.4",
